[gd_scene load_steps=9 format=2]

[ext_resource path="res://FishingScene/Ponds/Pond.tscn" type="PackedScene" id=1]
[ext_resource path="res://Assets/Fonts/arco/ARCO for OSX.otf" type="DynamicFontData" id=2]
[ext_resource path="res://Game/Settings/UI.gd" type="Script" id=3]
[ext_resource path="res://Shaders/CircleScreenTransition/CircleScreenTransition.tscn" type="PackedScene" id=4]
[ext_resource path="res://Game/Settings/Back.gd" type="Script" id=5]

[sub_resource type="DynamicFont" id=1]
size = 64
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=2]
size = 32
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=3]
size = 32
font_data = ExtResource( 2 )

[node name="Settings" type="Node"]

[node name="Pond" parent="." instance=ExtResource( 1 )]

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="UI" type="Control" parent="CanvasLayer"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}
start_scene = "res://Game/MainMenu/MainMenu.tscn"

[node name="Header" type="Label" parent="CanvasLayer/UI"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -646.0
margin_right = 646.0
margin_bottom = 80.0
rect_min_size = Vector2( 1280, 80 )
custom_fonts/font = SubResource( 1 )
text = "Settings"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Back" type="Button" parent="CanvasLayer/UI"]
anchor_top = 1.0
anchor_bottom = 1.0
margin_left = 24.0
margin_top = -69.0
margin_right = 125.0
margin_bottom = -9.0
rect_min_size = Vector2( 101, 60 )
rect_pivot_offset = Vector2( 50, 30 )
focus_mode = 0
custom_fonts/font = SubResource( 2 )
enabled_focus_mode = 0
text = "Back"
flat = true
script = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Tween" type="Tween" parent="CanvasLayer/UI/Back"]

[node name="MusicVolume" type="Label" parent="CanvasLayer/UI"]
margin_left = 420.0
margin_top = 240.0
margin_right = 691.0
margin_bottom = 274.0
rect_pivot_offset = Vector2( 141, 17 )
custom_fonts/font = SubResource( 3 )
text = "Music Volume"
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MusicSlider" type="HSlider" parent="CanvasLayer/UI/MusicVolume"]
margin_top = 38.0
margin_right = 440.0
margin_bottom = 54.0
rect_scale = Vector2( 1, 3 )
max_value = 1.0
step = 0.05
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SfxVolume" type="Label" parent="CanvasLayer/UI"]
margin_left = 420.0
margin_top = 343.0
margin_right = 644.0
margin_bottom = 377.0
rect_pivot_offset = Vector2( 141, 17 )
custom_fonts/font = SubResource( 3 )
text = "Sfx Volume"
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SfxSlider" type="HSlider" parent="CanvasLayer/UI/SfxVolume"]
margin_top = 38.0
margin_right = 440.0
margin_bottom = 54.0
rect_scale = Vector2( 1, 3 )
max_value = 1.0
step = 0.05
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ScreenTransition" parent="CanvasLayer/UI" instance=ExtResource( 4 )]

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2( 640, 360 )
current = true

[connection signal="button_down" from="CanvasLayer/UI/Back" to="CanvasLayer/UI/Back" method="_on_Back_button_down"]
[connection signal="button_up" from="CanvasLayer/UI/Back" to="CanvasLayer/UI/Back" method="_on_Back_button_up"]
[connection signal="tween_all_completed" from="CanvasLayer/UI/Back/Tween" to="CanvasLayer/UI/Back" method="_on_Tween_tween_all_completed"]
[connection signal="value_changed" from="CanvasLayer/UI/MusicVolume/MusicSlider" to="CanvasLayer/UI" method="_on_MusicSlider_value_changed"]
[connection signal="value_changed" from="CanvasLayer/UI/SfxVolume/SfxSlider" to="CanvasLayer/UI" method="_on_SfxSlider_value_changed"]
